--- a/development/docker/security-server/openbao/Dockerfile
+++ b/development/docker/security-server/openbao/Dockerfile
@@ -1,6 +1,6 @@
 FROM openbao/openbao:2.4.1
 
-RUN apk add --no-progress jq bash > /dev/null 2>&1
+RUN apk add --no-progress jq bash curl > /dev/null 2>&1
 # creating xroad user and folder to reuse the secret-store-init.sh script
 RUN addgroup -S xroad && \
     adduser -S -G xroad xroad && \
