--- a/development/docker/central-server/files/cs-xroad.conf
+++ b/development/docker/central-server/files/cs-xroad.conf
@@ -20,36 +20,43 @@ user=openbao
 autorestart=true
 stopsignal=INT
 stopwaitsecs=30
+priority=120
 
 [program:xroad-secret-store-local]
 command=/usr/share/xroad/scripts/secret-store-init.sh
-autorestart=unexpected
+autorestart=false
+exitcodes=0
+priority=150
 
 [program:xroad-center]
-command=/usr/share/xroad/bin/xroad-centralserver-admin-service
+command=/usr/share/xroad/scripts/wait-for-secret-store.sh /usr/share/xroad/bin/xroad-centralserver-admin-service
 user=xroad
 autorestart=true
+priority=300
 
 [program:xroad-center-registration-service]
-command=/usr/share/xroad/bin/xroad-centralserver-registration-service
+command=/usr/share/xroad/scripts/wait-for-secret-store.sh /usr/share/xroad/bin/xroad-centralserver-registration-service
 user=xroad
 autorestart=true
+priority=300
 
 [program:xroad-center-management-service]
-command=/usr/share/xroad/bin/xroad-centralserver-management-service
+command=/usr/share/xroad/scripts/wait-for-secret-store.sh /usr/share/xroad/bin/xroad-centralserver-management-service
 user=xroad
 autorestart=true
+priority=300
 
 [program:xroad-signer]
-command=/usr/share/xroad/bin/xroad-signer
+command=/usr/share/xroad/scripts/wait-for-secret-store.sh /usr/share/xroad/bin/xroad-signer
 user=xroad
 autorestart=true
-priority=200
+priority=300
 
 [program:xroad-autologin]
 command=/usr/share/xroad/autologin/xroad-autologin-retry.sh
 user=xroad
 autorestart=false
+priority=400
 
 [program:cron]
 command=/usr/sbin/cron -f
