chore(SS): Fix TS issues
Refs: XRDDEV-3023

--- a/src/shared-ui/tsconfig.json
+++ b/src/shared-ui/tsconfig.json
@@ -15,7 +15,8 @@
     "noEmit": true,
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "types": ["node", "vite/client"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [
