--- a/src/shared-ui/package.json
+++ b/src/shared-ui/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "lint": "eslint . --fix",
+    "type-check": "vue-tsc --noEmit -p tsconfig.json --composite false",
     "build": "pnpm run generate-types",
     "generate-types": "rm -rf src/openapi-types && openapi --input ../common/common-admin-api/src/main/resources/common-openapi-definition.yaml --output ./src/openapi-types --exportCore false --exportServices false",
     "license-check": "license-check-and-add check -f license-check-and-add-config.json",
