feat: As a Security Server Administrator I want to be able to define what policy is used for choosing TSA-s and OCSP responders so that I can better manage costs
refs: XRDDEV-2980

--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
@@ -11,6 +11,8 @@ backup-encryption-keyids = "backup.key1@example.org, backup.key2@example.org, ba
 ssl-enabled=false # Can be removed once UI system tests configure a functional AUTH certificate
 health-check-port=5588
 server-conf-cache-period=0
+timestamping_prioritization_strategy=PAID_FIRST
+ocsp_prioritization_strategy=ONLY_FREE
 [configuration-client]
 update-interval = 3
 global-conf-tls-cert-verification = false
