--- a/src/security-server/admin-service/application/src/test/resources/application-test.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application-test.yml
@@ -47,3 +47,5 @@ xroad:
   proxy-ui-api:
     key-management-api-whitelist: 127.0.0.0/8, ::1
     regular-api-whitelist: 0.0.0.0/0, ::/0
+    rpc:
+      enabled: false
