--- a/deployment/security-server/k8s/charts/openbao-init/templates/job.yaml
+++ b/deployment/security-server/k8s/charts/openbao-init/templates/job.yaml
@@ -11,30 +11,22 @@ spec:
       initContainers:
         - name: wait-for-openbao
           image: {{ .Values.image }}
-          imagePullPolicy: IfNotPresent
-          command: [ 'sh', '-c', 'until curl -s -k $OPENBAO_ADDR/v1/sys/health; do echo waiting for openbao; sleep 5; done' ]
+          imagePullPolicy: {{ .Values.imagePullPolicy }}
+          command: [ 'sh', '-c', 'until curl -s -k $BAO_ADDR/v1/sys/health; do echo waiting for openbao; sleep 5; done' ]
           env:
-            - name: OPENBAO_ADDR
-              value: {{ .Values.openbao.addr }}
+            - name: BAO_ADDR
+              value: {{ .Values.openbao.address }}
       containers:
         - name: openbao-init
           image: {{ .Values.image }}
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: {{ .Values.imagePullPolicy }}
           command: [ "/bin/sh", "-c" ]
           args:
             - |
               echo "[MAIN] Starting OpenBao initialization process..."
               /scripts/init.sh
               if [ $? -eq 0 ]; then
-                echo "[MAIN] Initialization successful, starting unseal..."
-                /scripts/unseal.sh
-                if [ $? -eq 0 ]; then
-                  echo "[MAIN] Unseal successful, starting setup..."
-                  /scripts/setup.sh
-                else
-                  echo "[MAIN] Unseal failed"
-                  exit 1
-                fi
+                echo "[MAIN] Initialization successful"
               else
                 echo "[MAIN] Initialization failed"
                 exit 1
@@ -44,14 +36,18 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-            - name: OPENBAO_ADDR
-              value: {{ .Values.openbao.addr }}
-            - name: SECRET_NAME
+            - name: BAO_ADDR
+              value: {{ .Values.openbao.address }}
+            - name: BAO_NODES
+              value: "{{ if .Values.openbao.nodes }}{{ range $i, $node := .Values.openbao.nodes }}{{ if $i }} {{ end }}{{ $node }}{{ end }}{{ else }}{{ .Values.openbao.address }}{{ end }}"
+            - name: ROOT_SECRET_NAME
               value: {{ .Values.serviceAccount.name }}
+            - name: XROAD_TOKEN_SECRET_NAME
+              value: {{ .Values.openbao.xroad_token_secret_name }}
             - name: THRESHOLD
-              value: {{ .Values.openbao.threshold | quote }}
+              value: {{ .Values.openbao.shamir.threshold | quote }}
             - name: SHARES
-              value: {{ .Values.openbao.shares | quote }}
+              value: {{ .Values.openbao.shamir.shares | quote }}
           volumeMounts:
             - name: init-script
               mountPath: /scripts
