--- a/src/security-server/e2e-test/src/intTest/resources/compose.e2e.yaml
+++ b/src/security-server/e2e-test/src/intTest/resources/compose.e2e.yaml
@@ -1,12 +1,10 @@
 services:
-  ui:
-    environment:
-      - XROAD_MESSAGE_LOG_ARCHIVER_ARCHIVE_INTERVAL=*/10 * * * * *
-      - XROAD_MESSAGE_LOG_ARCHIVER_CLEAN_INTERVAL=*/15 * * * * *
-      - XROAD_MESSAGE_LOG_ARCHIVER_CLEAN_KEEP_RECORDS_FOR=0
   proxy:
     environment:
-      - XROAD_MESSAGE_LOG_TIMESTAMP_IMMEDIATELY=true
+      - XROAD_PROXY_MESSAGE_LOG_TIMESTAMPER_TIMESTAMP_IMMEDIATELY=true
+      - XROAD_PROXY_MESSAGE_LOG_ARCHIVER_ARCHIVE_INTERVAL=*/10 * * * * ?
+      - XROAD_PROXY_MESSAGE_LOG_ARCHIVER_CLEAN_INTERVAL=*/15 * * * * ?
+      - XROAD_PROXY_MESSAGE_LOG_ARCHIVER_CLEAN_KEEP_RECORDS_FOR=0
   db-messagelog:
     ports:
       - "0:5432"
