chore: enable encryption in sys tests
Refs: XRDDEV-3030

--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -23,7 +23,7 @@ xroad:
         messagelog-keystore-password: somepassword
         messagelog-key-id: key1
       archiver:
-        encryption-enabled: false
+        encryption-enabled: true
     addon:
       op-monitor:
         enabled: true
