chore: drop jmx system tests
Refs: XRDDEV-2861

--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -41,7 +41,6 @@ microprofile = "3.1"
 
 [libraries]
 metrics-core = { module = "io.dropwizard.metrics:metrics-core", version.ref = "metrics" }
-metrics-jmx = { module = "io.dropwizard.metrics:metrics-jmx", version.ref = "metrics" }
 
 jetty-server = { module = "org.eclipse.jetty:jetty-server", version.ref = "jetty" }
 jetty-http = { module = "org.eclipse.jetty:jetty-http", version.ref = "jetty" }
@@ -208,7 +207,7 @@ protobufGradlePlugin = { module = "com.google.protobuf:com.google.protobuf.gradl
 quarkusGradlePlugin = { module = "io.quarkus:gradle-application-plugin", version.ref = "quarkus" }
 
 [bundles]
-metrics = ["metrics-core", "metrics-jmx"]
+metrics = ["metrics-core"]
 jaxb = ["jaxb-runtime", "jaxb-xjc"]
 testAutomation = ["testAutomation-containers", "testAutomation-allure", "testAutomation-feign"]
 
