feat: move messagelog db encryption to bao
Refs: XRDDEV-3030

--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -19,9 +19,7 @@ xroad:
     message-log:
       database-encryption:
         enabled: true
-        messagelog-keystore: /etc/xroad/messagelog/messagelog.p12
-        messagelog-keystore-password: somepassword
-        messagelog-key-id: key1
+        key-id: default
       archiver:
         encryption-enabled: true
     addon:
