chore: fixed vault permission setup and testing in system tests
Refs: XRDDEV-3030

--- a/development/docker/security-server/env.template
+++ b/development/docker/security-server/env.template
@@ -4,8 +4,9 @@
 # For local development, use localhost:5555 (requires local registry)
 # For CI, this file is auto-generated with GHCR URLs
 
-# Secret store token for OpenBao
-XROAD_SECRET_STORE_TOKEN=root-token
+# Secret store token for OpenBao (root token for dev mode)
+XROAD_SECRET_STORE_ROOT_TOKEN=root-token
+XROAD_SECRET_STORE_TOKEN=xroad-dev-client-token
 
 # Security Server component images
 # Format: REGISTRY/image-name:tag
