--- a/development/docker/security-server/compose.yaml
+++ b/development/docker/security-server/compose.yaml
@@ -4,7 +4,8 @@ services:
     pull_policy: always
     environment:
       - BAO_ADDR=http://0.0.0.0:8200
-      - BAO_TOKEN=${XROAD_SECRET_STORE_TOKEN}
+      - BAO_TOKEN=${XROAD_SECRET_STORE_ROOT_TOKEN}
+      - XROAD_SECRET_STORE_TOKEN_OVERRIDE=${XROAD_SECRET_STORE_TOKEN:-}
     healthcheck:
       interval: 5s
       retries: 40
