fix: always add common properties to config locations.

--- a/src/service/monitor/monitor-application/src/main/resources/application.yaml
+++ b/src/service/monitor/monitor-application/src/main/resources/application.yaml
@@ -24,5 +24,7 @@ xroad:
   quarkus:
     config:
       locations:
+        - xroad-common.yaml
+        - xroad-logging.yaml
         - /etc/xroad/conf.d/local.yaml
         - /etc/xroad/db.properties
