--- a/src/service/configuration-client/configuration-client-application/src/main/resources/application.yaml
+++ b/src/service/configuration-client/configuration-client-application/src/main/resources/application.yaml
@@ -30,6 +30,8 @@ quarkus:
   quarkus:
     config:
       locations:
+        - xroad-common.yaml
+        - xroad-logging.yaml
         - /etc/xroad/conf.d/local.yaml
         - /etc/xroad/db.properties
     log:
@@ -41,6 +43,8 @@ quarkus:
   quarkus:
     config:
       locations:
+        - xroad-common.yaml
+        - xroad-logging.yaml
         - /etc/xroad/conf.d/local.yaml
         - /etc/xroad/db.properties
     datasource:
