--- a/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
+++ b/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
@@ -25,6 +25,8 @@ xroad:
   quarkus:
     config:
       locations:
+        - xroad-common.yaml
+        - xroad-logging.yaml
         - /etc/xroad/conf.d/local.yaml
         - /etc/xroad/db.properties
     log:
