--- a/src/service/signer/signer-application/src/main/resources/application.yaml
+++ b/src/service/signer/signer-application/src/main/resources/application.yaml
@@ -23,6 +23,8 @@ quarkus:
   quarkus:
     config:
       locations:
+        - xroad-common.yaml
+        - xroad-logging.yaml
         - /etc/xroad/conf.d/local.yaml
         - /etc/xroad/db.properties
     log:
