chore: UI deprecation cleanup
lint

Refs: XRDDEV-3024

--- a/src/shared-ui/.prettierrc
+++ b/src/shared-ui/.prettierrc
@@ -2,6 +2,5 @@
   "trailingComma": "all",
   "singleQuote": true,
   "arrowParens": "always",
-  "tabWidth": 2,
-  "singleAttributePerLine": true
+  "tabWidth": 2
 }
