--- a/.github/workflows/_build-and-package.yml
+++ b/.github/workflows/_build-and-package.yml
@@ -22,7 +22,8 @@ on:
 jobs:
   build-and-package:
     name: Build, test and package code
-    runs-on: ubuntu-24.04
+    runs-on:
+      labels: xrd-runner-4c
     outputs:
       image_registry: ${{ steps.build-config.outputs.image_registry }}
       service_image_tag: ${{ steps.build-config.outputs.service_image_tag }}
