--- a/.github/workflows/_test-e2e.yml
+++ b/.github/workflows/_test-e2e.yml
@@ -23,7 +23,8 @@ on:
 jobs:
   test-e2e:
     name: Run E2E tests
-    runs-on: ubuntu-22.04
+    runs-on:
+      labels: xrd-runner-8c
     steps:
       - name: Start Measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
