--- a/.github/workflows/_test-central-server.yml
+++ b/.github/workflows/_test-central-server.yml
@@ -23,7 +23,8 @@ on:
 jobs:
   test-central-server:
     name: Run Central Server system tests
-    runs-on: ubuntu-22.04
+    runs-on:
+      labels: xrd-runner-8c
     steps:
       - name: Start Measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
