--- a/.github/workflows/_build-and-package.yml
+++ b/.github/workflows/_build-and-package.yml
@@ -144,7 +144,7 @@ jobs:
         run: |
           ./gradlew -Dorg.gradle.jvmargs=-Xmx6g \
           -PsonarqubeHost=https://sonarcloud.io -PsonarqubeProjectKey=nordic-institute_X-Road -PsonarqubeOrganization=nordic-institute \
-          build sonar test jacocoAggregatedReport -Pfrontend-npm-audit --parallel
+          build sonar test jacocoAggregatedReport -Pfrontend-npm-audit --parallel -Dorg.gradle.workers.max=6
 
       - name: Build Security Server images
         working-directory: ./deployment/security-server/images
@@ -170,8 +170,8 @@ jobs:
           name: Unit and integration tests
           path: src/**/build/test-results/**/TEST-*.xml
           reporter: java-junit
-          list-suites: 'failed'
-          list-tests: 'failed'
+          list-suites: 'none'
+          list-tests: 'none'
 
       - name: Upload intTest reports
         uses: actions/upload-artifact@v5
