--- a/src/security-server/admin-service/ui/package.json
+++ b/src/security-server/admin-service/ui/package.json
@@ -10,7 +10,7 @@
     "build": "pnpm run generate-types && vitest --run && vite build",
     "preview": "vite preview",
     "build-only": "vite build",
-    "test": "vitest run",
+    "test": "vitest run --test-timeout=15000",
     "type-check": "vue-tsc --noEmit -p tsconfig.json --composite false",
     "lint": "eslint . --fix",
     "generate-types": "rm -rf src/openapi-types && openapi --input ../../openapi-model/src/main/resources/META-INF/openapi-definition.yaml --output ./src/openapi-types --exportCore false --exportServices false",
