chore: set unique network names to int test containers

--- a/src/central-server/admin-service/int-test/src/intTest/resources/application-override.yml
+++ b/src/central-server/admin-service/int-test/src/intTest/resources/application-override.yml
@@ -23,6 +23,7 @@ test-automation:
       tags: "not @Skip"
   containers:
     testable-container:
+      internal-network-alias: admin-service-int-test
       reuse-between-runs: ${reuse-between-runs}
       spring-boot:
         base-image: eclipse-temurin:21-noble
