--- a/src/central-server/admin-service/ui-system-test/src/intTest/resources/application-override.yml
+++ b/src/central-server/admin-service/ui-system-test/src/intTest/resources/application-override.yml
@@ -22,6 +22,7 @@ test-automation:
       tags: "not @Skip"
   containers:
     testable-container:
+      internal-network-alias: cs-ui-system-test
       reuse-between-runs: false
       directory-mounts:
         - "/var/log/xroad/:build/cs-container-logs/" # useful for debugging. This will attach logs
