--- a/.github/workflows/_build-and-package.yml
+++ b/.github/workflows/_build-and-package.yml
@@ -142,10 +142,9 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         working-directory: ./src
         run: |
-          ./gradlew -Dorg.gradle.jvmargs=-Xmx6g \
-          -PsonarqubeHost=https://sonarcloud.io -PsonarqubeProjectKey=nordic-institute_X-Road -PsonarqubeOrganization=nordic-institute \
-          build sonar test jacocoAggregatedReport -Pfrontend-npm-audit --parallel -Dorg.gradle.workers.max=6
-
+          ./gradlew -Dorg.gradle.jvmargs=-Xmx6g build jacocoAggregatedReport -Pfrontend-npm-audit --parallel -Dorg.gradle.workers.max=6
+          ./gradlew -Dorg.gradle.jvmargs=-Xmx6g -PsonarqubeHost=https://sonarcloud.io -PsonarqubeProjectKey=nordic-institute_X-Road \
+          -PsonarqubeOrganization=nordic-institute sonar
       - name: Build Security Server images
         working-directory: ./deployment/security-server/images
         env:
