--- a/.github/workflows/_test-e2e.yml
+++ b/.github/workflows/_test-e2e.yml
@@ -23,8 +23,7 @@ on:
 jobs:
   test-e2e:
     name: Run E2E tests
-    runs-on:
-      labels: xrd-runner-8c
+    runs-on: ubuntu-24.04
     steps:
       - name: Start Measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
