chore: separate CS admin service intTest into a separate CI job.

--- a/src/central-server/admin-service/application/src/main/resources/application-int-test.yml
+++ b/src/central-server/admin-service/application/src/main/resources/application-int-test.yml
@@ -6,8 +6,17 @@ spring:
     type: none
   jpa:
     show-sql: false
+  cloud:
+    vault:
+      host: mock-server
+      port: 1080
+      scheme: http
+
+signerProxyMockUri: http://mock-server:1080
 
 xroad:
+  common-rpc:
+    use-tls: false
   admin-service:
     cache-default-ttl: -1
     cache-api-key-ttl: -1
