--- a/.github/workflows/_test-services.yml
+++ b/.github/workflows/_test-services.yml
@@ -23,7 +23,7 @@ on:
 jobs:
   test-signer-service:
     name: Run Signer service integration tests
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Start Measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
@@ -102,7 +102,7 @@ jobs:
 
   test-op-monitor-service:
     name: Run Operational Monitor service integration tests
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Start Measurement
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
@@ -172,6 +172,83 @@ jobs:
             src/service/op-monitor/op-monitor-int-test/build/a2c_logs/
             src/service/op-monitor/op-monitor-int-test/build/allure-report/
             src/service/op-monitor/op-monitor-int-test/build/container-logs/
+
+      - name: Show Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
+        with:
+          task: display-results
+          pr-comment: true
+  test-cs-admin-service:
+    name: Run CS Admin service integration tests
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Start Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
+        with:
+          task: start-measurement
+          label: 'CS Admin service integration tests'
+
+      - uses: actions/checkout@v5
+        with:
+          ref: ${{ inputs.ref }}
+
+      - name: Setup build environment
+        uses: ./.github/actions/setup-build-env
+        with:
+          gradle-cache-read-only: true
+          free-disk-space: false
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: CS Admin test setup measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
+        with:
+          task: get-measurement
+          label: 'Set up CS Admin service tests'
+
+      - name: Run CS Admin integration tests
+        working-directory: ./src
+        run: |
+          ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :central-server:admin-service:int-test:intTest \
+            -PxroadImageRegistry=${{ inputs.image_registry }} \
+            -PxroadImageTag=${{ inputs.service_image_tag }}
+
+      - name: Log storage after tests
+        if: always()
+        uses: ./.github/actions/log-storage
+        with:
+          label: 'Storage After Signer Tests'
+          show-docker-images: 'true'
+
+      - name: Test CS Admin measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
+        with:
+          task: get-measurement
+          label: 'Test Signer service'
+
+      - name: Test report
+        env:
+          NODE_OPTIONS: '--max-old-space-size=6144'
+        uses: dorny/test-reporter@v2
+        if: success() || failure()
+        with:
+          name: Signer service integration tests
+          path: src/central-server/admin-service/int-test/build/test-results/**/TEST-*.xml
+          reporter: java-junit
+
+      - name: Upload CS Admin test report
+        uses: actions/upload-artifact@v5
+        if: failure()
+        with:
+          name: CS Admin Integration Test report
+          path: |
+            src/central-server/admin-service/int-test/build/allure-report/
+            src/central-server/admin-service/int-test/build/container-logs/
 
       - name: Show Energy Results
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
