--- a/src/central-server/admin-service/int-test/src/intTest/resources/application-override.yml
+++ b/src/central-server/admin-service/int-test/src/intTest/resources/application-override.yml
@@ -23,25 +23,4 @@ test-automation:
       tags: "not @Skip"
   containers:
     testable-container:
-      internal-network-alias: admin-service-int-test
-      reuse-between-runs: ${reuse-between-runs}
-      spring-boot:
-        base-image: eclipse-temurin:21-noble
-        jar-debug-enabled: false
-        debug-port: 9000
-        jacoco:
-          enabled: true
-        jar-build-dir: ../application/build/libs/
-        spring-profiles-to-activate: int-test,audit-test
-    context-containers:
-      xrd-db :
-        enabled: true
-        reuse-between-runs: ${reuse-between-runs}
-      mock-server:
-        enabled: true
-        reuse-between-runs: ${reuse-between-runs}
-
-# toggle for reusable containers. This allows quicker test development as containers are not destroyed between runs.
-# WARNING: this leaves containers running indefinitely. They have to be stopped manually.
-# Note: this required testcontainers.reuse.enable=true property to be defined in your ~/.testcontainers.properties file
-reuse-between-runs: false
+      enabled: false
