--- a/src/central-server/admin-service/int-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
+++ b/src/central-server/admin-service/int-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
@@ -5,3 +5,4 @@ ha-node-name=test_node
 rate-limit-enabled=true
 rate-limit-requests-per-second=100
 rate-limit-requests-per-minute=1000
+global-configuration-generation-rate-in-seconds=99999 ; unused in int tests
