--- a/src/central-server/admin-service/int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/central-server/admin-service/int-test/src/intTest/resources/compose.intTest.yaml
@@ -16,10 +16,16 @@ services:
     deploy:
       resources:
         reservations:
-          memory: 96M
+          memory: 768M
         limits:
-          memory: 1024M
+          memory: 2048M
   mock-server:
     image: mockserver/mockserver:mockserver-5.15.0
     ports:
       - "0:1080"
+    deploy:
+      resources:
+        reservations:
+          memory: 128M
+        limits:
+          memory: 512M
