chore: improve CS admin service int test performance

--- a/development/docker/central-server/files/etc/postgresql/16/main/postgresql-performance.conf
+++ b/development/docker/central-server/files/etc/postgresql/16/main/postgresql-performance.conf
@@ -7,19 +7,21 @@
 # MEMORY SETTINGS
 #------------------------------------------------------------------------------
 # MEMORY USAGE BREAKDOWN:
-# - BASELINE (always allocated at startup): shared_buffers + wal_buffers = ~272MB
+# - BASELINE (always allocated at startup): shared_buffers + wal_buffers = ~544MB
 # - ON-DEMAND (only when needed): work_mem, maintenance_work_mem
 # - PLANNER HINT (not allocated): effective_cache_size
 #
-# Current baseline: ~272MB (256MB shared_buffers + 16MB wal_buffers)
-# To reduce baseline further: lower shared_buffers to 128MB-192MB
-# To maximize performance: increase shared_buffers to 512MB-1GB
+# Current baseline: ~544MB (512MB shared_buffers + 32MB wal_buffers)
+# Optimized for slow storage (GitHub Actions) - higher caching reduces I/O
+# To reduce baseline: lower shared_buffers to 256MB, wal_buffers to 16MB
+# For fast local SSD: can reduce shared_buffers to 256MB-512MB
 
 # Shared memory buffers (ALWAYS ALLOCATED - baseline memory usage)
-# Lower value = less memory at idle, but may reduce cache hit ratio under load
+# Higher values = better cache hit ratio, less I/O (critical for slow storage)
 # Default: 128MB
-# For low baseline: 256MB (current), For max performance: 512MB-1GB
-shared_buffers = 256MB
+# For slow I/O (GitHub Actions): 512MB-1GB recommended
+# For fast I/O (local SSD): 256MB-512MB sufficient
+shared_buffers = 512MB  # Increased for slow storage environments
 
 # Effective cache size (PLANNER HINT ONLY - not actual memory allocation)
 # This tells PostgreSQL how much memory is available for caching (OS cache + shared_buffers)
@@ -40,21 +42,27 @@ work_mem = 128MB
 maintenance_work_mem = 512MB
 
 # WAL buffers (ALWAYS ALLOCATED - baseline memory usage)
+# Higher values = more buffering, less frequent I/O (better for slow storage)
 # Default: -1 (auto, ~16MB), Recommended: 16MB-32MB
-# Can reduce to 8MB for lower baseline if needed (may slightly reduce write performance)
-wal_buffers = 16MB
+# For slow storage: 32MB-64MB to reduce I/O frequency
+wal_buffers = 32MB  # Increased for slow storage environments
 
 #------------------------------------------------------------------------------
 # QUERY TUNING
 #------------------------------------------------------------------------------
 
-# Random page cost (lower for SSD storage)
-# Default: 4.0, Recommended for SSD: 1.1-1.5
-random_page_cost = 1.1
+# Random page cost (optimized for storage type)
+# For SSD: 1.1-1.5, For slow storage (GitHub Actions): 2.0-3.0
+# Lower value = planner prefers random I/O (good for SSD)
+# Higher value = planner prefers sequential I/O (better for slow storage)
+# Using 1.5 as compromise - can be tuned based on environment
+random_page_cost = 1.5
 
-# Effective IO concurrency (higher for SSD)
-# Default: 1, Recommended for SSD: 200-300
-effective_io_concurrency = 200
+# Effective IO concurrency (optimized for storage type)
+# For SSD: 200-300, For slow storage: 50-100
+# Lower for slow storage to reduce I/O queue depth
+# Using 100 as compromise - can be tuned based on environment
+effective_io_concurrency = 100
 
 # Default statistics target (higher = better query plans, more time to analyze)
 # Default: 100, Recommended: 200-500
@@ -171,13 +179,14 @@ max_replication_slots = 0
 # Default: on, For tests: off
 full_page_writes = off
 
-# Reduce checkpoint frequency (less overhead, acceptable for tests)
-# Default: 5min, For tests: 15min (less frequent checkpoints = better performance)
-checkpoint_timeout = 15min
+# Reduce checkpoint frequency (less overhead, critical for slow storage)
+# Default: 5min, For tests: 15min-30min (less frequent = less I/O)
+# For slow storage: longer timeout = fewer checkpoints = better performance
+checkpoint_timeout = 30min  # Increased for slow storage environments
 
 # Larger WAL segments before checkpoint (less frequent checkpoints)
-# Already set above, but can be even larger for tests
-max_wal_size = 4GB
+# For slow storage: larger = fewer checkpoints = better performance
+max_wal_size = 8GB  # Increased from 4GB for slow storage environments
 
 # Disable logging overhead (TEST ONLY - no audit trail needed)
 # Default: various logging enabled, For tests: minimal logging
@@ -203,6 +212,25 @@ log_line_prefix = ''  # No prefix overhead
 # Reduce query plan statistics overhead (keep track_counts for query planning)
 # track_counts should stay on for query optimization, but reduce other stats
 # stats_temp_directory = 'pg_stat_tmp'  # Already default
+
+#------------------------------------------------------------------------------
+# SLOW STORAGE OPTIMIZATIONS (for GitHub Actions / cloud storage)
+#------------------------------------------------------------------------------
+
+# Sequential page cost (for slow storage, prefer sequential I/O)
+# Default: 1.0, Lower = prefer sequential scans (better for slow storage)
+seq_page_cost = 0.8  # Slightly lower to prefer sequential I/O
+
+# Background writer settings (for slow storage)
+# More aggressive background writing to reduce checkpoint I/O spikes
+bgwriter_delay = 50ms  # Default: 200ms, Lower = more frequent writes
+bgwriter_lru_maxpages = 200  # Default: 100, More pages written per cycle
+bgwriter_lru_multiplier = 4.0  # Default: 2.0, More aggressive writing
+
+# Reduce I/O during schema operations
+# Batch writes more aggressively
+commit_delay = 100000  # Default: 0, Microseconds to delay commit (batch writes)
+commit_siblings = 10  # Default: 5, Number of concurrent transactions before batching
 
 #------------------------------------------------------------------------------
 # SCHEMA OPERATIONS OPTIMIZATION (for frequent drops/recreates)
