chore: improve CS admin service int test performance

--- a/development/docker/central-server/files/etc/postgresql/16/main/postgresql-performance.conf
+++ b/development/docker/central-server/files/etc/postgresql/16/main/postgresql-performance.conf
@@ -254,3 +254,40 @@ vacuum_cost_page_dirty = 5  # Default: 20, Lower = faster vacuum
 lock_timeout = 0  # No timeout (TEST ONLY - may cause hangs in production)
 statement_timeout = 0  # No timeout (TEST ONLY)
 
+#------------------------------------------------------------------------------
+# ANTI-DEGRADATION SETTINGS (prevent performance degradation over time)
+#------------------------------------------------------------------------------
+
+# Aggressive autovacuum for system catalogs (pg_class, pg_attribute, etc.)
+# System catalogs accumulate metadata even when dropping/recreating schemas
+# These settings force more frequent vacuum/analyze of system catalogs
+autovacuum_vacuum_insert_threshold = 50  # Default: 1000, Lower = vacuum inserts more often
+autovacuum_vacuum_insert_scale_factor = 0.01  # Default: 0.2, Lower = vacuum inserts more aggressively
+
+# Force vacuum on system catalogs more frequently
+# System catalogs are small but critical - vacuum them aggressively
+# Note: These are global vacuum settings, not autovacuum-specific
+vacuum_freeze_min_age = 50000000  # Default: 50M, Lower = freeze tuples sooner
+vacuum_multixact_freeze_min_age = 5000000  # Default: 5M, Lower = freeze multixact sooner
+# Note: vacuum_freeze_max_age and vacuum_multixact_freeze_max_age are not configurable parameters
+# They are controlled by autovacuum_freeze_max_age which is set via ALTER SYSTEM or postgresql.conf
+# but may not be available in all PostgreSQL versions - relying on autovacuum defaults
+
+# Disable query plan caching for DDL-heavy workloads
+# Prevents caching of plans that become stale quickly
+plan_cache_mode = auto  # Default: auto, Can be 'force_custom_plan' to disable caching
+
+# More aggressive vacuum of dead tuples (important for frequent drops/recreates)
+# Lower thresholds = vacuum more often, preventing accumulation
+autovacuum_vacuum_scale_factor = 0.02  # Default: 0.2, Lower = vacuum smaller tables
+autovacuum_vacuum_threshold = 5  # Default: 50, Lower = vacuum very small tables
+
+# Force analyze of system catalogs more frequently
+# System catalog statistics degrade over time with frequent schema operations
+autovacuum_analyze_scale_factor = 0.005  # Default: 0.1, Even more aggressive (was 0.01)
+autovacuum_analyze_threshold = 5  # Default: 50, Even more aggressive (was 10)
+
+# Reduce overhead from statistics queries
+# pg_stat_* queries can be slow when tables are large
+track_activity_query_size = 512  # Reduced from 1024 - smaller query text storage
+
