--- a/.github/workflows/_build-and-package.yml
+++ b/.github/workflows/_build-and-package.yml
@@ -23,7 +23,8 @@ jobs:
   build-and-package:
     name: Build, test and package code
     timeout-minutes: 60
-    runs-on: ubuntu-24.04
+    runs-on:
+      labels: xrd-runner-8c
     outputs:
       image_registry: ${{ steps.build-config.outputs.image_registry }}
       service_image_tag: ${{ steps.build-config.outputs.service_image_tag }}
