chore: improve system/e2e test performance

--- a/development/docker/central-server/Dockerfile
+++ b/development/docker/central-server/Dockerfile
@@ -98,7 +98,7 @@ RUN useradd xrd-sys && adduser xrd-sys xroad-system-administrator && sh -c "echo
 COPY --chown=xroad:xroad files/etc /etc/
 
 # Copy PostgreSQL performance configuration
-COPY --chown=postgres:postgres files/etc/postgresql/16/main/postgresql-performance.conf /etc/postgresql/16/main/postgresql-performance.conf
+COPY --from=perf --chown=postgres:postgres postgresql-performance.conf /etc/postgresql/16/main/postgresql-performance.conf
 
 COPY files/cs-entrypoint.sh /root/entrypoint.sh
 COPY --chown=root:root files/cs-xroad.conf /etc/supervisor/conf.d/xroad.conf
