chore: Keep batch signatures enabled in native deployments when upgrading from < 8.0.0

--- a/deployment/native-packages/src/xroad/default-configuration/override-securityserver-ee.ini
+++ b/deployment/native-packages/src/xroad/default-configuration/override-securityserver-ee.ini
@@ -11,6 +11,7 @@ enforce-token-pin-policy=true
 connector-host=127.0.0.1
 ; todo xrd 8 (note: prop name changed)
 server-min-supported-client-version=7.5.0
+batch-signing-enabled=true
 
 client-http-port=80
 client-https-port=443
