--- a/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
+++ b/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
@@ -9,7 +9,7 @@ services:
     environment:
       - JAVA_TOOL_OPTIONS=-Dxroad.internal.passwordstore-provider=file -Dquarkus.config.locations=/etc/xroad/conf.d/local.yaml
       - XROAD_SIGNER_OCSP_RESPONSE_RETRIEVAL_ACTIVE=true
-      - QUARKUS_LOG_LEVEL=DEBUG
+      - QUARKUS_LOG_LEVEL=INFO
     volumes:
       - ./container-files/etc/xroad/conf.d:/etc/xroad/conf.d
   proxy:
