refactor: SystemProperties refactor
- center.trusted-anchors-allowed

Refs: XRDDEV-3029

--- a/src/central-server/admin-service/application/src/main/resources/application.yml
+++ b/src/central-server/admin-service/application/src/main/resources/application.yml
@@ -109,6 +109,7 @@ xroad:
       internal-directory: internalconf
       external-directory: externalconf
       generated-conf-dir: /var/lib/xroad/public
+    trusted-anchors-allowed: true
     authentication-provider: PAM
     global-configuration-generation-rate-in-seconds: 60
     rate-limit-enabled: true
