refactor: SystemProperties refactor
- center.database-properties

Refs: XRDDEV-3029

--- a/src/central-server/admin-service/application/src/main/resources/application.yml
+++ b/src/central-server/admin-service/application/src/main/resources/application.yml
@@ -104,6 +104,7 @@ file-upload-endpoints:
 
 xroad:
   admin-service:
+    database-properties: /etc/xroad/db.properties
     global-conf-generator:
       minimum-global-configuration-version: 2
       internal-directory: internalconf
