chore: set tag version for main build
Refs: XRDDEV-3043

--- a/.github/workflows/_build-and-package.yml
+++ b/.github/workflows/_build-and-package.yml
@@ -142,7 +142,9 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         working-directory: ./src
         run: |
-          ./gradlew -Dorg.gradle.jvmargs=-Xmx6g build -Pfrontend-npm-audit --parallel -Dorg.gradle.workers.max=6
+          ./gradlew -Dorg.gradle.jvmargs=-Xmx6g build -Pfrontend-npm-audit --parallel -Dorg.gradle.workers.max=6 \
+          -PxroadImageRegistry=${{ env.IMAGE_REGISTRY }} \
+          -PxroadImageTag=${{ env.SERVICE_IMAGE_TAG }}
           ./gradlew -Dorg.gradle.jvmargs=-Xmx6g -PsonarqubeHost=https://sonarcloud.io -PsonarqubeProjectKey=nordic-institute_X-Road \
           -PsonarqubeOrganization=nordic-institute jacocoAggregatedReport sonar
       - name: Build Security Server images
