refactor: SystemProperties refactor
- getConfPath() + /configuration-parts

Refs: XRDDEV-3029

--- a/src/common/common-properties/src/main/resources/xroad-common.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-common.yaml
@@ -46,6 +46,7 @@ logging:
     org.springframework: INFO
 
 xroad:
+  common-root-conf-path: /etc/xroad/
   common-rpc:
     certificate-provisioning:
       common-name: ${XROAD_HOST:localhost}
