--- a/.github/workflows/_test-services.yml
+++ b/.github/workflows/_test-services.yml
@@ -193,6 +193,11 @@ jobs:
         with:
           name: cs-admin-int-test-jar
 
+      - uses: actions/checkout@v5
+        with:
+          ref: ${{ inputs.ref }}
+
+
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
