--- a/deployment/native-packages/src/xroad/ubuntu/generic/control
+++ b/deployment/native-packages/src/xroad/ubuntu/generic/control
@@ -13,14 +13,14 @@ Description: Monitoring client configuration for X-Road central
  X-Road global monitoring configuration file.
 
 Package: xroad-centralserver
-Conflicts: xroad-securityserver, xtee55-center
+Conflicts: xroad-securityserver
 Architecture: all
 Depends: xroad-center (=${binary:Version}), xroad-centralserver-monitoring (=${binary:Version}), xroad-center-registration-service (=${binary:Version}), xroad-center-management-service (=${binary:Version})
 Description: X-Road central server
  This is meta-package of X-Road central server.
 
 Package: xroad-center
-Conflicts: xroad-proxy, xroad-confproxy, xtee55-center
+Conflicts: xroad-proxy, xroad-confproxy
 Architecture: all
 Depends: ${misc:Depends}, rsyslog, curl, unzip, libmhash2, xroad-nginx (=${binary:Version}), xroad-signer (=${binary:Version}), xroad-confclient (=${binary:Version})
 Pre-Depends: xroad-database-local (=${binary:Version}) | xroad-database-remote (=${binary:Version}), xroad-base (=${binary:Version})
@@ -31,16 +31,12 @@ Package: xroad-base
 Architecture: amd64 arm64
 Pre-Depends: dpkg (>= 1.15.7.2)
 Depends: ${misc:Depends}, openjdk-21-jre-headless | java21-runtime-headless | java21-runtime, rlwrap, ca-certificates-java, crudini, adduser, net-tools, iproute2, sudo, openssl, gpg, gpg-agent, bc, python3, python3-yaml
-Replaces: xroad-proxy (<< 6.8.9), xroad-common (<= 6.17.0-0.20171018082348git2ecf68ed)
-Breaks: xroad-common (<= 6.17.0-0.20171018082348git2ecf68ed)
 Description: X-Road base components
  X-Road base components and utilities
 
 Package: xroad-confclient
 Architecture: amd64 arm64
 Depends: ${misc:Depends}, xroad-base (=${binary:Version}), xroad-secret-store-local (=${binary:Version}) | xroad-secret-store-remote (=${binary:Version})
-Replaces: xroad-common (<= 6.17.0-0.20171018082348git2ecf68ed)
-Breaks: xroad-common (<= 6.17.0-0.20171018082348git2ecf68ed)
 Description: X-Road configuration client components
  X-Road configuration client
 
@@ -48,21 +44,17 @@ Package: xroad-nginx
 Architecture: amd64 arm64
 Pre-Depends: nginx-light (>=1.5.10) | nginx-core (>=1.5.10)
 Depends: ${misc:Depends}, xroad-base (=${binary:Version})
-Replaces: xroad-common (<= 6.17.0-0.20171018082348git2ecf68ed)
-Breaks: xroad-common (<= 6.17.0-0.20171018082348git2ecf68ed)
 Description: X-Road nginx component
  X-Road nginx dependencies and configurations
 
 Package: xroad-signer
 Architecture: amd64 arm64
 Depends: ${misc:Depends}, xroad-base (=${binary:Version}), xroad-secret-store-local (=${binary:Version}) | xroad-secret-store-remote (=${binary:Version})
-Replaces: xroad-common (<= 6.17.0-0.20171018082348git2ecf68ed)
-Breaks: xroad-common (<= 6.17.0-0.20171018082348git2ecf68ed)
 Description: X-Road signer component
  X-Road signer components and utilities
 
 Package: xroad-securityserver
-Conflicts: xroad-centralserver, uxp-addon-monitor (<=6.5)
+Conflicts: xroad-centralserver
 Architecture: all
 Depends: xroad-proxy (=${binary:Version}), xroad-monitor (=${binary:Version}), xroad-proxy-ui-api (=${binary:Version}), xroad-backup-manager (=${binary:Version})
 Description: X-Road security server
@@ -130,8 +122,6 @@ Description: X-Road operations monitoring daemon
 Package: xroad-autologin
 Architecture: all
 Depends: ${misc:Depends}, expect, xroad-signer (=${binary:Version})
-Replaces: aux-xroad-autologin (<< 1.4-1)
-Conflicts: aux-xroad-autologin (<< 1.4-1)
 Description: Automatic token pin code entry
  Optional utility that automatically enters the software token pin code on xroad-signer start
 
@@ -139,15 +129,15 @@ Package: xroad-proxy-ui-api
 Architecture: all
 Pre-Depends: xroad-base (=${binary:Version})
 Depends: ${misc:Depends}, xroad-proxy (=${binary:Version})
-Replaces: xroad-nginx, xroad-jetty9
-Breaks: xroad-nginx, xroad-jetty9
+Replaces: xroad-nginx
+Breaks: xroad-nginx
 Description: X-Road proxy UI REST API
  REST API for X-Road proxy UI and management operations
 
 Package: xroad-database-local
 Architecture: all
 Conflicts: xroad-database-remote
-Depends: xroad-base (=${binary:Version}), postgresql | postgresql-9.4, postgresql-contrib | postgresql-contrib-9.4
+Depends: xroad-base (=${binary:Version}), postgresql, postgresql-contrib
 Description: Meta-package for X-Road local database dependencies
 
 Package: xroad-database-remote
@@ -184,9 +174,8 @@ Description: Meta-package for X-Road remote secret store dependencies
 
 Package: xroad-backup-manager
 Architecture: amd64 arm64
-#todo: should be (<< 8.0.0)
-Replaces: xroad-proxy (<< 7.7.0)
-Breaks: xroad-proxy (<< 7.7.0)
+Replaces: xroad-proxy (<< 7.9.0)
+Breaks: xroad-proxy (<< 7.9.0)
 Depends: ${misc:Depends}, xroad-base (=${binary:Version}), xroad-secret-store-local (=${binary:Version}) | xroad-secret-store-remote (=${binary:Version})
 Description: X-Road backup manager
  X-Road backup manager
