--- a/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
@@ -135,8 +135,7 @@ services:
         limits:
           memory: 512M
   testca:
-    build:
-      context: ../../../../../../common/common-int-test/src/main/resources/META-INF/ca-container
+    image: ${CA_IMG}
     pull_policy: always
     healthcheck:
       interval: 5s
