--- a/src/central-server/admin-service/int-test/src/intTest/resources/test-automation.yaml
+++ b/src/central-server/admin-service/int-test/src/intTest/resources/test-automation.yaml
@@ -5,7 +5,9 @@ test-framework:
     additional-packages:
       - org.niis.xroad.cs.test
   cucumber:
-    glue: "org.niis.xroad.cs.test,org.niis.xroad.test.framework"
+    glue:
+      - "org.niis.xroad.cs.test"
+      - "org.niis.xroad.test.framework"
     filter-tags: "not @Skip"
 
 "%cli":
