chore: generate tls settings into local-tls.yaml
Refs: XRDDEV-3021

--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -36,6 +36,7 @@ spring:
     import:
       - classpath:/xroad-common.yaml
       - optional:file:/etc/xroad/db.properties
+      - optional:file:/etc/xroad/conf.d/local-tls.yaml
       - optional:file:/etc/xroad/conf.d/local.yaml
 
 # TLS
