--- a/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
+++ b/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
@@ -27,6 +27,7 @@ xroad:
       locations:
         - xroad-common.yaml
         - xroad-logging.yaml
+        - /etc/xroad/conf.d/local-tls.yaml
         - /etc/xroad/conf.d/local.yaml
         - /etc/xroad/db.properties
     log:
