--- a/src/central-server/admin-service/application/src/main/resources/application.yml
+++ b/src/central-server/admin-service/application/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
   config:
     import:
       - classpath:/xroad-common.yaml
+      - optional:file:/etc/xroad/conf.d/local-tls.yaml
       - optional:file:/etc/xroad/conf.d/local.yaml
   jackson:
     default-property-inclusion: NON_NULL
