--- a/src/service/proxy/proxy-application/src/main/resources/application.yaml
+++ b/src/service/proxy/proxy-application/src/main/resources/application.yaml
@@ -18,6 +18,7 @@ quarkus:
       locations:
         - xroad-common.yaml
         - xroad-logging.yaml
+        - /etc/xroad/conf.d/local-tls.yaml
         - /etc/xroad/conf.d/local.yaml
         - /etc/xroad/db.properties
     log:
